spec/error_foul_in_pure.expected
spec/error_foul_in_pure.kex:3:15: error: Cannot call foul function 'IO.printLine' from pure context
Aborted: fix type errors before running (use --no-check to skip).
