spec/error_foul_in_pure.kex
# Pure function calling IO is a purity violation.
let impure(msg: String) do
  IO.printLine(msg)
end

main do
  impure("hello")
end
